tests/compiler/errors/if_is_binding_out_of_scope.casa
# expect: UNDEFINED_NAME

enum Maybe {
    Just (int)
    Nothing
}

fn use_after_fi m:Maybe {
    if m Maybe::Just(value) is then
        value drop
    fi
    value drop
}
42 Maybe::Just use_after_fi
